[package]
name = "csess-express"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
horrorshow = "0.8.4"
regex = { version = "1.10.5", default-features = false, features = ["std"] }
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
